<resources>
    <string name="app_name">MNN-LLM</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="main_describe">mnn-llm</string>
    <string name="spinner_prompt">Select Model</string>
    <string name="model_loading">Model loading…</string>
    <string name="download_not_started">Not Downloaded, click to download</string>
    <string name="downloaded_click_to_chat">Downloaded, click to start chat</string>
    <string name="download_failed_click_retry">Download failed: %1$s, click to retry</string>
    <string name="downloading_progress">Downloading: %1$.2f%%</string>.
    <string name="downloading_paused">Download Paused: %1$.2f%%</string>
    <string name="config_file_not_found">Model config file not found: %1$s</string>
    <string name="model_hello_prompt">Hello, I am %1$s, is there anything I can help you with?</string>
    <string name="model_hello_prompt_diffusion">Hello, I am %1$s, Please input prompt to generate an image</string>
    <string name="delete_model">Delete Model</string>
    <string name="pause_download">Pause Download</string>
    <string name="start_download">Start Download</string>
    <string name="download_preparing">Download preparing</string>
    <string name="downloading_please_wait">Downloading please wait</string>
    <string name="loading_failed_click_tor_retry">Loading failed: %1$s, click tor retry</string>
    <string name="input_messages">Input messages here</string>
    <string name="send">send</string>
    <string name="raise_issue">Report an issue</string>
    <string name="star_project">Star in Github </string>
    <string name="resume_all_downloads">Resume all unfnished downloads</string>
    <string name="history_cleard">history cleared</string>
    <string name="press_to_chat">Press To Talk</string>
    <string name="start_new_chat">Start New Conversation</string>
    <string name="new_conversation_started">New converstaion started</string>
    <string name="take_photo">Photo</string>
    <string name="choose_image">Image</string>
    <string name="select_audio">Audio(wav)</string>
    <string name="show_performance_metrics">Show Performance Metrics</string>

<!--    <string name="app_name">DrawerLayoutDemo</string>-->
    <string name="nav_open">Open navigation drawer</string>
    <string name="nav_close">Close navigation drawer</string>
    <string name="models">Models</string>
    <string name="history">History</string>
    <string name="history_title">Chat History</string>
    <string name="history_delete_success">History Delete Success</string>
    <string name="diffusion_generated_message">Here\'s the generated image</string>
    <string name="diffusion_generate_progress">Image Generate progress: %1$s%%</string>
    <string name="no_history">No history, please select model in the model list and chat</string>
    <string name="recording_permission_denied">Please allow permission to record audio</string>
    <string name="release_to_send">Release to Send, Slide up to cancel</string>
    <string name="release_to_cancel">Release to cancel</string>
    <string name="r1_thinking_message">Thinking…\n</string>
    <string name="r1_think_complete_template">Has thought for ss seconds\n</string>
    <string name="copy_text">Copy</string>
    <string name="select_text">Select text</string>
    <string name="copy_success">Copy success</string>
    <string name="debug_message_copied">debug message copied, please report issue in github</string>
    <string name="use_model_scope_download">Use modelscope to download</string>
    <string name="clear_mmap_cache">Clear mmap cache</string>
    <string name="use_mmap">Use mmap</string>
    <string name="mmap_cacche_cleared">mmap cache cleared, you need to restart the session</string>
    <string name="mmap_not_used">mmap not used</string>
    <string name="reloading_session">Reloading chat session</string>
    <string name="wait_install_apk">please wait for download complete and install</string>
    <string name="check_for_update">Check for update</string>
    <string name="get_update_info_failed">get update info failed</string>
    <string name="no_update">No update available</string>
    <string name="download">Download</string>
    <string name="download_update_available">Update Available: (%1$s)</string>
</resources>
