<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:overScrollMode="never" />
        <androidx.cardview.widget.CardView
            android:id="@+id/layout_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rl_bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <View
                    android:id="@+id/anchor_view"
                    android:layout_width="0.1dp"
                    android:layout_height="0.1dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="25dp"/>
                <View
                    android:id="@+id/view_placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
                <RelativeLayout
                    android:id="@+id/btn_voice_recording"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_centerInParent="true"
                        android:text="@string/press_to_chat"
                        android:textColor="@android:color/black"/>
                </RelativeLayout>
                <Space
                    android:id="@+id/space"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="5dp"
                    />
                <ImageView
                    android:id="@+id/bt_plus"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:layout_constraintTop_toTopOf="@id/anchor_view"
                    app:layout_constraintBottom_toBottomOf="@id/anchor_view"
                    app:layout_constraintStart_toEndOf="@id/space"
                    android:layout_marginStart="5dp"
                    app:srcCompat="@drawable/ic_plus"
                    tools:visibility="visible"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/bt_switch_audio"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:visibility="visible"
                    android:layout_marginStart="5dp"
                    app:layout_constraintTop_toTopOf="@id/anchor_view"
                    app:layout_constraintBottom_toBottomOf="@id/anchor_view"
                    app:layout_constraintStart_toEndOf="@id/bt_plus"
                    app:srcCompat="@drawable/ic_audio"
                    tools:ignore="ContentDescription" />
                <ImageView
                    android:id="@+id/bt_send"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:layout_constraintTop_toTopOf="@id/anchor_view"
                    app:layout_constraintBottom_toBottomOf="@id/anchor_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/button_send"
                    android:layout_marginEnd="10dp"
                    tools:ignore="ContentDescription" />
                <EditText
                    android:id="@+id/et_message"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/anchor_view"
                    app:layout_constraintBottom_toBottomOf="@id/anchor_view"
                    app:layout_constraintStart_toEndOf="@id/bt_switch_audio"
                    app:layout_constraintEnd_toStartOf="@id/bt_send"
                    android:background="@android:color/transparent"
                    android:hint="@string/input_messages"
                    android:imeOptions="actionSend"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textAppearance="@style/Light"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/h3"
                    android:visibility="visible"
                    android:focusable="true"
                    />
                <androidx.cardview.widget.CardView
                    android:id="@+id/image_preview_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="12dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/et_message"
                    android:layout_marginBottom="20dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp"
                    android:visibility="gone"
                    >
                    <ImageView
                        android:id="@+id/image_preview"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:scaleType="centerCrop"
                        tools:srcCompat="@drawable/testtest"
                        tools:ignore="ContentDescription"
                        />
                </androidx.cardview.widget.CardView>
                <ImageView
                    android:id="@+id/image_preview_delete"
                    android:visibility="gone"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="-10dp"
                    android:layout_marginTop="-10dp"
                    app:srcCompat="@drawable/ic_delete"
                    app:layout_constraintLeft_toRightOf="@id/image_preview_layout"
                    app:layout_constraintTop_toTopOf="@id/image_preview_layout"
                    tools:ignore="ContentDescription"
                    tools:visibility="gone"/>
                <com.github.ybq.android.spinkit.SpinKitView
                    android:visibility="gone"
                    android:id="@+id/voice_recording_wav"
                    android:background="@color/colorAccent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@id/anchor_view"
                    app:layout_constraintBottom_toBottomOf="@id/anchor_view"
                    style="@style/SpinKitView.Small.Wave"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:id="@+id/layout_more_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:paddingBottom="20dp"
            >
            <com.alibaba.mnnllm.android.chat.MoreMenuItemView
                android:id="@+id/more_item_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:icon="@drawable/ic_camera"
                app:text="@string/take_photo"/>
            <com.alibaba.mnnllm.android.chat.MoreMenuItemView
                android:id="@+id/more_item_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:icon="@drawable/ic_image"
                app:text="@string/choose_image" />
            <com.alibaba.mnnllm.android.chat.MoreMenuItemView
                android:id="@+id/more_item_audio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:icon="@drawable/ic_audio_file"
                app:text="@string/select_audio"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/text_voice_hint"
        android:layout_width="wrap_content"
        tools:text="@string/release_to_send"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:visibility="gone"
        android:layout_marginBottom="75dp"/>
</FrameLayout>